--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#
+# JDBC properties
+#
+spring.datasource.url=jdbc:mysql://localhost:3306/notes_directory?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=toor
