--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/notes_directory?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=toor
+
+spring.jpa.hibernate.ddl-auto=create
