--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@
 # JDBC properties
 #
 spring.datasource.url=jdbc:mysql://localhost:3306/notes_directory?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=toor
+spring.datasource.username=springstudent
+spring.datasource.password=springstudent
+
+spring.jpa.hibernate.ddl-auto=create
+
